# Scorbit SDK
#
# (c) 2025 Spinner Systems, Inc. (DBA Scorbit), scrobit.io, All Rights Reserved
#
# MIT License
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

[build-system]
requires = ["scikit-build-core>=0.11.0", "pybind11", "pybind11-stubgen>=2.5.3"]
build-backend = "scikit_build_core.build"

[project]
name = "scorbit"
dynamic = ["version"]
description = "Scorbit SDK"
authors = [
    { name = "Dilshod Mukhtarov", email = "dilshodm@scorbit.io" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
]

[tool.scikit-build]
# build-dir = "build-scikit"
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
cmake.args = ["-D SCORBIT_SDK_PRODUCTION=ON"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../VERSION"
regex = '^\s*(?P<value>\d+\.\d+\.\d+)\s*$'
