# Scorbit SDK
#
# (c) 2025 Spinner Systems, Inc. (DBA Scorbit), scorbit.io, All Rights Reserved
#
# MIT License
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scorbit"
dynamic = ["version"]
description = "Python wrapper for the Scorbit SDK (pinball scoring platform)"
readme = "README.md"
authors = [
    { name = "Dilshod Mukhtarov", email = "dilshodm@scorbit.io" },
]
requires-python = ">=3.6"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://scorbit.io"
Repository = "https://github.com/scorbit/scorbit_sdk"

[tool.setuptools.dynamic]
# Value is overwritten in build/build_python/stage/ from repo root VERSION at wheel time.
version = { attr = "scorbit._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scorbit = ["py.typed"]
